--- a/files/查询记录/styles.css
+++ b/files/查询记录/styles.css
@@ -12344,7 +12344,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Microsoft Tai Le Regular', 'Microsoft Tai Le';
+  font-family:'Microsoft Tai Le';
   font-weight:400;
   font-style:normal;
 }
@@ -12356,7 +12356,7 @@
   width:490px;
   height:50px;
   opacity:0.5;
-  font-family:'Microsoft Tai Le Regular', 'Microsoft Tai Le';
+  font-family:'Microsoft Tai Le';
   font-weight:400;
   font-style:normal;
 }
@@ -18411,7 +18411,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Microsoft Tai Le Regular', 'Microsoft Tai Le';
+  font-family:'Microsoft Tai Le';
   font-weight:400;
   font-style:normal;
 }
@@ -18423,7 +18423,7 @@
   width:490px;
   height:69px;
   opacity:0.5;
-  font-family:'Microsoft Tai Le Regular', 'Microsoft Tai Le';
+  font-family:'Microsoft Tai Le';
   font-weight:400;
   font-style:normal;
 }
